fix: selection items too close issue.

--- a/src/app/components/msp/msp.component.less
+++ b/src/app/components/msp/msp.component.less
@@ -10,10 +10,15 @@
 
   .msp-horizontal-list-group-item-sm{
     /*border: 1px solid red;*/
+    margin-left: 20px;
+    margin-right: 20px;
     width: 200px;
   }
   .msp-horizontal-list-group-item-lg{
     /*border: 1px solid green;*/
+    margin-left: 20px;
+    margin-right: 20px;
+    
     width: 300px;
   }
 }
